crates/aven-check/tests/fixtures/check/valid/optional-field-omission.av
value : { name: Text, phone: ?Text } = { name: "Ada" }
