crates/aven-check/tests/fixtures/check/invalid/identifier-mismatch.av
other : Text = "hi"
value : Int = other
